--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "reflect-metadata": "^0.1.13",
     "sonic-channel": "^1.2.6",
     "typeorm": "^0.2.32",
-    "typescript": "^4.2.4",
-    "uuid": "^8.3.2"
+    "typescript": "^4.2.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
